--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.15.1
+  firebase_auth: ^5.6.2
   connectivity_plus: ^6.1.4
   shared_preferences: ^2.5.3
   awesome_snackbar_content: ^0.1.6
