--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   injectable: ^2.5.0
   get_it: ^8.0.3
   flutter_screenutil: ^5.9.3
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
