--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.15.1
+  firebase_auth: ^5.6.2
   connectivity_plus: ^6.1.4
   shared_preferences: ^2.5.3
   awesome_snackbar_content: ^0.1.6
@@ -42,6 +43,8 @@ dependencies:
   injectable: ^2.5.0
   get_it: ^8.0.3
   flutter_screenutil: ^5.9.3
+  flutter_bloc: ^9.1.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +58,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  json_serializable: ^6.9.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
